Updated homework for normality section

--- a/normality.qmd
+++ b/normality.qmd
@@ -193,6 +193,10 @@ Let's say that we are looking at a dataset defined by a standard normal distribu
 
 First, let's visualize this distribution:
 
+<details>
+
+<summary>Click here to view plot creation code.</summary>
+
 ```{r}
 ###THIS WILL TAKE A WHILE TO RUN###
 
@@ -223,7 +227,11 @@ p2  <-  p + # add previous step as a "backbone"
   ylab("Frequency (Probability)") +
   # make it neat and tidy
   theme_classic()
+```
 
+</details>
+
+```{r}
 # plot it
 # can use ggsave function to save
 plot(p2)
@@ -232,6 +240,10 @@ plot(p2)
 Above, the solid black line represents $x$, with the illustrated standard normal distribution being filled in blue.
 
 Let's see how much of the area represents values *as extreme or more extreme* as our value $x$.
+
+<summary>
+
+<details>Click here for code to create figure.</details>
 
 ```{r}
 ### THIS WILL TAKE A WHILE TO RUN ###
@@ -255,7 +267,11 @@ p2  <-  p + # add previous step as a "backbone"
   ylab("Frequency (Probability)") +
   # make it neat and tidy
   theme_classic()
+```
 
+</summary>
+
+```{r}
 # plot it
 # can use ggsave function to save
 plot(p2)
@@ -276,6 +292,10 @@ print(paste0("Our Z scores are: ",
 ```
 
 The above values make sense, given the distribution is symmetrical. Our above dashed line is as $Z = 1.96$, which means we should have a $p = 0.05$, so the dashed line should be *closer* to the mean than our cutoffs.
+
+<details>
+
+<summary>Click here for code to create figure.</summary>
 
 ```{r}
 ### THIS WILL TAKE A WHILE TO RUN ###
@@ -303,7 +323,11 @@ p2  <-  p + # add previous step as a "backbone"
   ylab("Frequency (Probability)") +
   # make it neat and tidy
   theme_classic()
+```
 
+</details>
+
+```{r}
 # plot it
 # can use ggsave function to save
 plot(p2)
@@ -381,7 +405,11 @@ There are other functions in this family as well in *R,* including `dnorm` for q
 
 When this class was being designed, [Hurricane Milton](https://en.wikipedia.org/wiki/Hurricane_Milton) was about to make contact with Florida. Hurricane Milton is considered one of the strongest hurricanes of all time, so we can look at historical hurricane data to determine just how powerful this storm really was. We can get information on maximum wind speeds of all recorded Atlantic hurricanes as of 2024 from Wikipedia.
 
-```{r, eval = F, echo = F}
+<details>
+
+<summary>Click here for details on creating the file for this walkthrough.</summary>
+
+```{r, eval = F}
 # https://stackoverflow.com/questions/59481608/how-to-remove-the-characters-from-a-string-and-leave-only-the-numbers-in-r
 
 # cocatenating wikipedia files.
@@ -480,6 +508,8 @@ colnames(speedlist) <- "Hurricane_Windspeed"
 
 write_csv(speedlist,path = "~/Documents/GitHub/biol105_unk/assignments/hurricane_speeds.csv")
 ```
+
+</details>
 
 ```{r}
 hurricanes <- read_csv("https://raw.githubusercontent.com/jacobccooper/biol305_unk/main/assignments/hurricane_speeds.csv")
@@ -580,7 +610,7 @@ $$
 CI=\bar{x} \pm Z_{1-\frac{\alpha}{2}}\cdot \frac{\sigma}{\sqrt{n}}
 $$
 
-This interval gives us an idea of where the mean should lie. For example, if we are looking at the aforemention `beewalk` temperature data, we can calulate a $0.95$ confidence interval around the mean.
+This interval gives us an idea of where the mean should lie. For example, if we are looking at the aforementioned `beewalk` temperature data, we can calulate a $0.95$ confidence interval around the mean.
 
 ```{r}
 temps <- na.omit(beewalk$temperature)
@@ -621,6 +651,72 @@ print(paste(round(xbar, 2),
 
 *Note* that the above is rounded to two decimal places to illustrative purposes ONLY, and should be rounded to one decimal place if it was a homework assignment because the original data has only one decimal place.
 
-## Homework: Chapter 8
+## Homework: Normal distributions
 
-Please complete problems 8.1, 8.2, 8.3 & 8.6. Follow the directions as written in the book. Submit one `html` file, as derived from *RStudio*. For maximum clarity, create headings to separate your problems. (Remember, a header can be invoked by placing '`#`' in front of a line of text. For example: the header here is written as `# Homework: Chapter 8`).
+Submit one `html` file, as created in *RStudio*, with you answers to the following questions. For maximum clarity, create headings to separate your problems. (Remember, a header can be invoked by placing '`#`' in front of a line of text. For example: the header here is written as `# Homework: Chapter 8`).
+
+### $Z$ to $p$ 
+
+For each of the following, report the corresponding $p$ value for the $z$ score.
+
+A.  2.3
+B.  6.4
+C.  -1.5
+D.  -9.2
+E.  3.2
+
+### $P$ to $z$
+
+For the following, report the corresponding $z$ score for the stated $p$ value. For this question, assume every value is "looking left" (`lower.tail = T`).
+
+A.  0.96
+B.  0.23
+C.  0.14
+D.  0.0036
+E.  0.47
+F.  0.62
+
+### Confidence intervals
+
+For the following scenarios, calculate the confidence interval for the mean.
+
+A.  $\bar{x} = 7.6$, $\sigma = 1.3$, $n = 5$, $CI = 99\%$
+B.  $\bar{x} = -4.9$, $\sigma = 0.7$, $n = 6$, $CI = 95\%$
+C.  $\bar{x} = 2.1$, $\sigma = 0.4$, $n = 10$, $CI = 90\%$
+D.  $\bar{x} = 0.1$, $\sigma = 3$, $n = 12$, $CI = 95\%$
+
+### Italian climate - spring
+
+As part of a study on how climate affects the weights of Alpine Ibex, researchers recorded the maximum temperature in the spring at their study site [@brambilla_2024_12749273]. The researchers find another site with an average spring maximum temperature of 6.2ºC, and claim that it is warmer than their study site. Are the correct?
+
+Evaluate their claims by:
+
+1.  Calculating a $z$-score for their temperature (6.2).
+2.  Calculating a $p$-value for their temperature (6.2).
+3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
+4.  In a single sentence, state whether you find this temperature to be significantly warmer than the mean or not, stating what evidence you are using to make this conclusion.
+
+The data for this problem will be in the object `spring_temps` below:
+
+```{r, eval = F}
+# load weather data
+weather <- read_csv("https://zenodo.org/records/12749273/files/20240505_env_var_dataset.csv")
+
+# isolate spring temperatures
+spring_temps <- weather$SpringTmax |>
+  # remove NA values
+  na.omit() |> 
+  # ensure data are in correct numeric format
+  as.numeric()
+```
+
+### Italian climate - Summer
+
+Using the same dataset (`weather`) as the previous question, isolate the data for the summer (column `SummTmax`). The researchers find the average temperature of another site is 13.6ºC, and claim this is warmer than their research site. Are they correct? As with the previous question, complete the following:
+
+1.  Calculating a $z$-score for their temperature (6.2).
+2.  Calculating a $p$-value for their temperature (6.2).
+3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
+4.  In a single sentence, state whether you find this temperature to be significantly warmer than the mean or not, stating what evidence you are using to make this conclusion.
+
+*Note* for this question, you will have to isolate the column and perform all of the analysis steps yourself.
