--- a/references.bib
+++ b/references.bib
@@ -162,3 +162,21 @@
 	pages = {ukaa081},
 	file = {Full Text PDF:/Users/cooperj2/Zotero/storage/QIFNBAEK/Cooper et al. - 2021 - Multiple lines of evidence indicate ongoing allopa.pdf:application/pdf;Full Text PDF:/Users/cooperj2/Zotero/storage/LQZZ9SUT/Cooper et al. - 2021 - Multiple lines of evidence indicate ongoing allopa.pdf:application/pdf;Snapshot:/Users/cooperj2/Zotero/storage/ZCADH382/6178384.html:text/html},
 }
+
+@dataset{brambilla_2024_12749273,
+  author       = {Brambilla, Alice and
+                  von Hardenberg, Achaz and
+                  Bassano, Bruno and
+                  Ranghetti, Luigi and
+                  Keller, Lukas and
+                  Festa-Bianchet, Marco},
+  title        = {Data from: Climate drives body mass changes in a
+                   mountain ungulate: Shorter winters lead to heavier
+                   Alpine ibex
+                  },
+  month        = jul,
+  year         = 2024,
+  publisher    = {Zenodo},
+  doi          = {10.5061/dryad.w9ghx3fz6},
+  url          = {https://doi.org/10.5061/dryad.w9ghx3fz6},
+}
