--- a/references.bib
+++ b/references.bib
@@ -195,3 +195,17 @@
   doi          = {10.5061/dryad.2nv32qh},
   url          = {https://doi.org/10.5061/dryad.2nv32qh},
 }
+
+@dataset{boyle_2016_4979259,
+  author       = {Boyle, W. Alice and
+                  Sigel, Bryan J.},
+  title        = {Data from: Ongoing changes in the avifauna of La
+                   Selva Biological Station, Costa Rica: twenty-three
+                   years of Christmas Bird Counts
+                  },
+  month        = jan,
+  year         = 2016,
+  publisher    = {Zenodo},
+  doi          = {10.5061/dryad.65v10},
+  url          = {https://doi.org/10.5061/dryad.65v10},
+}
