--- a/normality.qmd
+++ b/normality.qmd
@@ -655,7 +655,7 @@ print(paste(round(xbar, 2),
 
 Submit one `html` file, as created in *RStudio*, with you answers to the following questions. For maximum clarity, create headings to separate your problems. (Remember, a header can be invoked by placing '`#`' in front of a line of text. For example: the header here is written as `# Homework: Chapter 8`).
 
-### $Z$ to $p$ 
+### $Z$ to $p$
 
 For each of the following, report the corresponding $p$ value for the $z$ score.
 
@@ -663,7 +663,7 @@ A.  2.3
 B.  6.4
 C.  -1.5
 D.  -9.2
-E.  3.2
+E.  0.3
 
 ### $P$ to $z$
 
@@ -689,13 +689,6 @@ D.  $\bar{x} = 0.1$, $\sigma = 3$, $n = 12$, $CI = 95\%$
 
 As part of a study on how climate affects the weights of Alpine Ibex, researchers recorded the maximum temperature in the spring at their study site [@brambilla_2024_12749273]. The researchers find another site with an average spring maximum temperature of 6.2ºC, and claim that it is warmer than their study site. Are the correct?
 
-Evaluate their claims by:
-
-1.  Calculating a $z$-score for their temperature (6.2).
-2.  Calculating a $p$-value for their temperature (6.2).
-3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
-4.  In a single sentence, state whether you find this temperature to be significantly warmer than the mean or not, stating what evidence you are using to make this conclusion.
-
 The data for this problem will be in the object `spring_temps` below:
 
 ```{r, eval = F}
@@ -710,13 +703,20 @@ spring_temps <- weather$SpringTmax |>
   as.numeric()
 ```
 
+Evaluate their claims by:
+
+1.  Calculating a $z$-score for their temperature (6.2ºC).
+2.  Calculating a $p$-value for their temperature (6.2ºC).
+3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
+4.  In a single sentence, state whether you find this temperature to be significantly warmer than the mean or not, stating what evidence you are using to make this conclusion.
+
 ### Italian climate - Summer
 
 Using the same dataset (`weather`) as the previous question, isolate the data for the summer (column `SummTmax`). The researchers find the average temperature of another site is 13.6ºC, and claim this is warmer than their research site. Are they correct? As with the previous question, complete the following:
 
-1.  Calculating a $z$-score for their temperature (6.2).
-2.  Calculating a $p$-value for their temperature (6.2).
+1.  Calculating a $z$-score for their temperature (13.6ºC).
+2.  Calculating a $p$-value for their temperature (13.6ºC).
 3.  Reporting a 95% confidence interval for the mean for the temperatures reported in their dataset.
 4.  In a single sentence, state whether you find this temperature to be significantly warmer than the mean or not, stating what evidence you are using to make this conclusion.
 
-*Note* for this question, you will have to isolate the column and perform all of the analysis steps yourself.
+*Note* for this question, you will have to isolate the column for summer temperatures from the `weather` dataframe and perform all of the analysis steps yourself.
