--- a/probdist.qmd
+++ b/probdist.qmd
@@ -339,4 +339,4 @@ What are the odds of rolling no fours on two twenty-sided die?
 
 ### Problem 9
 
-Dr. Cooper once caught his mom shaking sodas and putting them back at the shelves at a gas station while they were traveling. Assuming his mom was able to shake 10% of the sodas before getting caught, what are the odds of getting three shaken sodas if you buy 20 sodas?
+Dr. Cooper once caught his mom shaking sodas and putting them back at the shelves at a gas station while they were traveling. Assuming his mom was able to shake 10% of the sodas before getting caught, what are the odds of getting three or more shaken sodas if you buy 20 sodas?
