--- a/first_analysis.qmd
+++ b/first_analysis.qmd
@@ -31,7 +31,7 @@ In this class, there is one major library that you will need *almost every week*
 
 1.  `tidyverse`: this package is actually a [group of packages](https://www.tidyverse.org/) designed to help with data analysis, management, and visualization.
 
-**NOTE: If you leave the install prompts in your RMarkdown document, *it will not knit!* Install the following using the bottom right coding window of your *RStudio* session.**
+**NOTE: If you leave the install prompts in your RMarkdown document, *it will not knit!* Install the following using the bottom left coding window of your *RStudio* session.**
 
 ```{r, eval=FALSE}
 # run this code the first time ONLY
@@ -47,7 +47,7 @@ install.packages("tidyverse")
 update.packages()
 ```
 
--   After packages are installed, we will need to load them into our *R* environment. While we only need to do `install.packages` once on our machine, **we need to load libraries *every time we restart the program!***
+-   After packages are installed, we will need to load them into our *R* environment. While we only need to do `install.packages` ***once*** on our machine, **we need to load libraries *every time we restart the program!***
 
 **NOTE: The following is required in EVERY DOCUMENT that uses the `tidyverse` commands!**
 
@@ -64,7 +64,7 @@ You should have an output like the above. What this means is:
 
 #### Conflicts
 
-To clarify the conflicts, pretend that you can only know one definition of a word at a time, in this case, the word "cola".
+To clarify the *conflicts*, pretend that you can only know one definition of a word at a time, in this case, the word "cola".
 
 -   **English**: Cola is a type of soda pop or soft drink.
 
